# spi-tools

./: .gitignore  Android.bp  CMakeLists.txt  Makefile  Makefile.am  README.md  configure.ac  set-spi.c  spi-config.c  spi-pipe.c
man/: Makefile  Makefile.am  spi-config.1  spi-pipe.1
src/: Makefile  Makefile.am  config.h.cmake.in  spi-config.c  spi-pipe.c  spi-tools.c  spi-tools.h
